--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2024,3 +2024,19 @@ nouislider{
         padding: 0 !important;
     }
 }
+
+.kr-modal{
+    &.kr-center{
+        &.smallModal{
+            &.add-members-modal-popup{
+                .modal-dialog{
+                    max-width: 625px !important;
+                    height: 67% !important;
+                    .modal-content{
+                        border-radius: 8px !important;
+                    }
+                }
+            }
+        }
+    }
+}
