--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="selectedSourceType">
     <form #sourceCreation="ngForm">
         <div class="modal-header">
-            <div class="title">{{selectedSourceType.name}}</div>
+            <div class="title">{{ selectedJsonForEdit ? ('structuredData.edit_structured_data' | translate) : selectedSourceType.name}}</div>
             <div class="close_icon" (click)="cancleSourceAddition({cancel : true})" id="btn_close_add_structured_modal"><img class="ng-tns-c11-2"
                     src="assets/icons/modal-close.svg"></div>
         </div>
@@ -65,14 +65,14 @@
                 <ng-container *ngIf="selectedSourceType.resourceType === 'structuredDataManual'">
                     <div class="manual-structure-data">
                         <div class="col-12 row ml-0 mr-0 p-0 mb-3 align-items-center justify-content-between">
-                            <div class="title">Add Manually</div>
+                            <div class="title">{{ selectedJsonForEdit ? '' : ('structuredData.add_manually' | translate)}}</div>
                             <div class="indent" placement="top-center" container='body' ngbTooltip="Indent" tooltipClass="ngb_tooltip_custom_class sampleJson" id="btn_indent_add_structured_data" (click)="indentObj()"><img src="assets/icons/content/indent.svg"></div>                        
                         </div>
                         <div class="editor">
                             <div class="left-sec">
                                 <ngx-codemirror #codemirror name="jsonEditor" [options]="codeMirrorOptions" [(ngModel)]="structuredData.payload" (ngModelChange)="setEditorContent($event)" id="ngx_codemirror_add_structured_data"></ngx-codemirror>
                             </div>                                                     
-                            <div class="sample-json">                              
+                            <div class="sample-json" *ngIf="!selectedJsonForEdit">                              
                                 <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom-right'">
                                     <div class="dropdown dropdown-open">
                                         <button class="dropdown-toggle dropdown-input p-0" id="btn_toggle_sample_json_add_structured_data" ngbDropdownToggle placement="top-right" container='body' ngbTooltip="Sample JSON" tooltipClass="ngb_tooltip_custom_class sampleJson">                 
