--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -330,7 +330,7 @@
                 </div>
                 <div class="col-6 box-content">
                     <div class="full-card pb-4">
-                        <div class="title-card">{{'metrics.dash_board_view.Feedback'| translate}}</div>                        
+                        <div class="title-card">{{'metrics.dash_board_view.Feedback_Received'| translate}}</div>                        
                         <div class="row col-12 m-0 p-0">
                             <div class="col-6 m-0 p-0 legends_sec_piechart">                                
                                 <div echarts [options]="feedbackPieSearches" class="pie-chart-graph"></div>
@@ -349,7 +349,7 @@
                                 <div echarts [options]="feedbackPieResult" class="pie-chart-graph"></div>
                                 <div class="legend-data col-12 p-0">
                                     <div class="d-flex align-items-center mb-2">
-                                        <span class="indication usefull"></span><span class="title">{{'metrics.dash_board_view.Feedback_Received'| translate}}</span>                                   
+                                        <span class="indication usefull"></span><span class="title">{{'metrics.dash_board_view.Useful_Result'| translate}}</span>                                   
                                     </div>
                                     <div class="d-flex align-items-center mb-2">
                                         <span class="indication notusefull"></span><span class="title">{{'metrics.dash_board_view.Not_Useful_Result'| translate}}</span>
