--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -24,8 +24,24 @@
             <button class="kr-sg-button-primary btn_lg" (click)="addStopWord()" [disabled]="validation.duplicate || validation.spaceFound || !newStopWord">{{'stopWords.add'| translate}}</button>
         </div>
      </div> 
+
       <div class="empty_screen_data" *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
-        <div class="empty-stopwords" >
+          <perfect-scrollbar class="scoll-empty-screen">
+            <div class="empty-landing-screen">
+              <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" src="assets/images/contentmanag-empty.svg"></div>   
+              <div class="empty-title">You haven’t added any content data yet!</div>
+              <div class="desc-text"> The Content is the data ingested into SearchAssist that are indexed to answer search user queries. SearchAssist allows you to add content by crawling web domain and uploading documents.</div>
+              <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
+                <div class="dropdown dropdown-open">
+                  <button class="kr-sg-button-primary btn_lg px-2"  (click)="showAddStopWordsContainer=true">Add Stop Words</button>                                            
+                </div>                                    
+              </div>
+              <ng-container *ngIf="noItems && emptySearchResults">
+                  <div class="desc-text">Your Search Query doesn't match with any record.</div>
+              </ng-container>
+            </div>
+          </perfect-scrollbar>  
+        <div class="empty-stopwords" *ngIf="showAddStopWordsContainer">
           <div class="main_heading">{{'stopWords.lets_start_by_adding_stop_words'| translate}}</div>
           <div class="desc_info">{{'stopWords.select_on_how_would_you_like_to_add_stop_words'| translate}}</div>
           <div class="radio-sec">
